--- a/agenda-simples-SENAC-main/agenda-simples-SENAC-main/agenda-simples/agenda-simples.csproj
+++ b/agenda-simples-SENAC-main/agenda-simples-SENAC-main/agenda-simples/agenda-simples.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{52BCC3A8-3166-4047-A04E-472958C1BFF1}</ProjectGuid>
+    <ProjectGuid>{6BD5D8D9-C1AA-4B78-836F-1EDE68430C85}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>AgendaSimplesT5</RootNamespace>
-    <AssemblyName>AgendaSimplesT5</AssemblyName>
+    <RootNamespace>agenda_simples</RootNamespace>
+    <AssemblyName>agenda-simples</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="contato.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +55,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
